--- a/package.json
+++ b/package.json
@@ -1,20 +1,56 @@
 {
-  "name": "join",
+  "name": "joiny",
   "version": "0.0.0",
   "description": "Simple Multicast with WebRTC",
+  "main": "lib/index.js",
+  "scripts": {
+    "clean": "rimraf lib dist examples/*/dist",
+    "lint": "eslint src test examples",
+    "test": "mocha --compilers js:babel/register --recursive",
+    "test:watch": "npm test -- --watch",
+    "test:browser": "karma start",
+    "check": "npm run lint && npm run test",
+    "build:lib": "babel src --out-dir lib",
+    "build:umd": "webpack src/index.js dist/join.js --config webpack.config.development.js",
+    "build:umd:min": "webpack src/index.js dist/join.min.js --config webpack.config.production.js",
+    "build:examples": "babel-node examples/buildAll.js",
+    "build": "npm run build:lib && npm run build:umd && npm run build:umd:min",
+    "preversion": "npm run clean && npm run check",
+    "version": "npm run build",
+    "postversion": "git push && git push --tags && npm run clean",
+    "prepublish": "npm run clean && npm run build"
+  },
   "author": "Toshihiro Nakamura",
-  "repository": {"type": "git", "url": "git://github.com/nakamura-to/join.git"},
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/nakamura-to/join.git"
+  },
   "license": "MIT",
   "engines": {
-    "node": "0.10.x"
+    "node": "0.12.x"
   },
   "devDependencies": {
-    "gulp": "^3.8.7",
-    "gulp-karma": "0.0.4",
-    "gulp-tsc": "^0.9.2",
-    "karma": "^0.12.19",
-    "karma-chrome-launcher": "^0.1.3",
-    "karma-jasmine": "^0.2.2",
-    "lodash": "^2.4.1"
-  }
+    "babel": "^5.8.19",
+    "babel-core": "^5.8.19",
+    "babel-eslint": "^4.0.5",
+    "babel-loader": "^5.3.2",
+    "eslint": "^0.24.1",
+    "eslint-config-airbnb": "0.0.7",
+    "eslint-plugin-react": "^3.1.0",
+    "expect": "^1.8.0",
+    "mocha": "^2.2.5",
+    "rimraf": "^2.4.2",
+    "sinon": "^1.15.4",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
+  },
+  "npmName": "joiny",
+  "npmFileMap": [
+    {
+      "basePath": "/dist/",
+      "files": [
+        "*.js"
+      ]
+    }
+  ]
 }
