--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -11,13 +11,24 @@
   "author": "Toshihiro Nakamura",
   "license": "MIT",
   "dependencies": {
+    "react": "^0.14.0-beta1",
+    "react-dom": "^0.14.0-beta1",
+    "redux-thunk": "^0.1.0",
     "websocket": "^1.0.21"
   },
   "devDependencies": {
     "babel-core": "^5.8.20",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.15.6",
+    "eslint": "^1.0.0",
+    "eslint-config-airbnb": "0.0.7",
+    "eslint-loader": "^0.14.2",
+    "eslint-plugin-react": "^3.1.0",
+    "react": "^0.14.0-beta2",
+    "react-dom": "^0.14.0-beta2",
     "react-hot-loader": "^1.2.8",
+    "react-redux": "^0.2.2",
+    "redux": "^1.0.0-rc",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
