--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:browser": "karma start",
     "check": "npm run lint && npm run test",
     "build:lib": "babel src --out-dir lib",
-    "build:umd": "webpack src/index.js dist/join.js --config webpack.config.development.js",
-    "build:umd:min": "webpack src/index.js dist/join.min.js --config webpack.config.production.js",
+    "build:umd": "webpack src/index.js dist/joiny.js --config webpack.config.development.js",
+    "build:umd:min": "webpack src/index.js dist/joiny.min.js --config webpack.config.production.js",
     "build:examples": "babel-node examples/buildAll.js",
     "build": "npm run build:lib && npm run build:umd && npm run build:umd:min",
     "preversion": "npm run clean && npm run check",
